# FEFU-queries

./: .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
.github/workflows/: pipeline.yml
app/: app.py  ioc.py  settings.py
app/adapters/: authentication.py
app/adapters/database/: connection.py  models.py  repository.py
app/application/: bulk_create_form_populations_list.py  create_form_populations_from_table.py  gateway.py  login_user.py  match_form_population.py  unit_of_work.py
app/domain/: exceptions.py  models.py  services.py
app/presentation/: authentication.py  dependencies.py  interactor_factory.py  routes.py
app/presentation/authentication/: jwt.py  yandexid.py
app/templates/: base.html  login.html  populations_list.html
backend/: Makefile  pyproject.toml
backend/app/: app.py  ioc.py  settings.py  state.py
backend/app/adapters/: authentication.py
backend/app/adapters/database/: connection.py  repository.py
backend/app/application/: create_form_populations_from_table.py  create_user.py  gateway.py  login_user.py  match_form_population.py
backend/app/domain/: exceptions.py  models.py
backend/app/presentation/: interactor_factory.py  routes.py
backend/app/presentation/authentication/: api.py  jwt.py  yandexid.py
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: Api.js  App.jsx  settings.js
frontend/src/routes/: Forms.jsx  Login.jsx
